Version 1.00
	* Make sure that authentication failures are terminated early.
	* Better detect when the child has exited.
	* Improve error reporting.

Version 0.03
	* Change the match string from "Password: " to "assword:", as some ssh
	  usage uses a different prompt ("foo@bar's password:" instead of a
	  clean "Password:").
	* Add the "-V" option to display the version information

Version 0.02
	* Add the "-e" option.